<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7"
    tools:context="hamza.example.fitkitapp.Add_Breakfast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorBlueTopBar"
                android:text="Progress"
                android:gravity="center"
                android:textColor="@color/colorWhiteTopBarText"
                android:textSize="@dimen/topBarText" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/divider"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="72.3 KG"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/currentWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="70.2 KG"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            />

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="132dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="90dp"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider"
            />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/graph"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="300dp">


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_bar"
        android:layout_marginTop="34dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_gravity="bottom"
            android:text="@string/Home"
            android:id="@+id/Btn_Home"
            android:background="@color/colorBlueTopBar"
            android:textColor="@color/colorWhiteTopBarText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="7dp"
            android:text="@string/FoodDiary"
            android:id="@+id/Btn_FD"
            android:background="@color/colorBlueTopBar"
            android:textColor="@color/colorWhiteTopBarText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="270dp"
            android:layout_marginRight="2dp"
            android:text="@string/Progress"
            android:id="@+id/Btn_Progress"
            android:background="@color/colorBlueTopBar"
            android:textColor="@color/colorWhiteTopBarText"
            />

    </FrameLayout>


</LinearLayout>