<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:weightSum="23"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hamza.example.fitkitapp.Food_Diary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlueTopBar"
            android:text="@string/FoodDiary"
            android:textColor="@color/colorWhiteTopBarText"
            android:textSize="@dimen/topBarText" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="Today"
        android:gravity="center"
        android:id="@+id/textView"
        android:textColor="@color/colorWhiteTopBarText"
        android:textSize="19sp"
        android:background="@color/colorgray"
        android:layout_weight="0.04" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="22dp">
    <TextView
        android:layout_width="70dp"
        android:layout_height="21dp"
        android:text="2,230"
        android:textSize="19dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/caloriesGoal"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="15dp"
        android:layout_height="21dp"
        android:text="-"
        android:textSize="19sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView101"
        android:layout_marginLeft="30dp"
        android:layout_weight="0.04" />


    <TextView
        android:layout_width="40dp"
        android:layout_height="21dp"
        android:text="8"
        android:textSize="19sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/FoodCount"
        android:layout_marginLeft="15dp"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="40dp"
        android:layout_height="21dp"
        android:text="="
        android:textSize="19sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView102"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="21dp"
        android:text="1,230"
        android:textSize="19sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/caloriesRemaining"
        android:layout_marginLeft="30dp"
        android:layout_weight="0.04" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="50dp"
            android:layout_height="21dp"
            android:text="Goal"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/textView106"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="21dp"
            android:text="Food"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/textView107"
            android:layout_marginLeft="70dp"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="21dp"
            android:text="Remaining"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/textView108"
            android:layout_marginLeft="75dp"
            android:layout_weight="0.04" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="360dp"
            android:layout_height="20dp"
            android:background="@color/colorDarkBlue"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="130dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="Calories"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="195dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="Carbs"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="245dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="Fat"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="285dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="Protein"
                />

            TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="310dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="Sugars"
                />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="20dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="360dp"
                android:layout_height="20dp"
                android:background="@color/colorDarkBlue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="145dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="kcal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="205dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="g"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="252dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="g"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="305dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="g"
                />

            TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginLeft="325dp"
                android:textColor="@color/colorWhiteTopBarText"
                android:text="g"
                />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="Breakfast"
        android:id="@+id/textView3"
        android:textSize="19dp"
        android:gravity="start|center"
        android:textColor="@color/colorWhiteTopBarText"
        android:background="@color/colorBlueTopBar"
        android:layout_weight="0.05" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/add"
            android:layout_marginTop="5dp"
            android:id="@+id/addFood1"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="-250dp"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="  Add Food"
            android:layout_marginTop="7dp"
            android:id="@+id/textView4"
            android:textColor="@color/colorBlueTopBar"
            android:textSize="19dp" />

    </LinearLayout>

        <ListView
            android:id="@+id/listviewFood"
            android:layout_width="match_parent"
            android:layout_height="100dp">
        </ListView>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="Lunch"
        android:id="@+id/lunch"
        android:textSize="19dp"
        android:gravity="start|center"
        android:textColor="@color/colorWhiteTopBarText"
        android:background="@color/colorBlueTopBar"
        android:layout_weight="0.05" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/add"
            android:id="@+id/addFood2"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="-250dp"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="  Add Food"
            android:id="@+id/add_lunch"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorBlueTopBar"
            android:textSize="19dp" />
    </LinearLayout>

        <ListView
            android:id="@+id/listviewFood2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1">
        </ListView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="Dinner"
        android:gravity="start|center"
        android:id="@+id/dinner"
        android:textSize="19dp"
        android:textColor="@color/colorWhiteTopBarText"
        android:background="@color/colorBlueTopBar"
        android:layout_weight="0.05" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/add"
            android:layout_marginTop="5dp"
            android:id="@+id/addFood3"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="-250dp"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="  Add Food"
            android:id="@+id/add_dinner"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorBlueTopBar"
            android:textSize="19dp" />
    </LinearLayout>
        <ListView
            android:id="@+id/listviewFood3"
            android:layout_width="match_parent"
            android:layout_height="100dp">
        </ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="Totals"
        android:id="@+id/total"
        android:textSize="19dp"
        android:gravity="start|center"
        android:textColor="@color/colorWhiteTopBarText"
        android:background="@color/colorBlueTopBar"
        android:layout_weight="0.05" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="35dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Goals"
        android:textColor="@color/colorBlack"
        android:textSize="19dp"
        android:id="@+id/textView5"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2,230"
        android:layout_marginLeft="90dp"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:id="@+id/goalCal"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="278"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:id="@+id/goalCarbs"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="74"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:id="@+id/goalFat"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="111"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:id="@+id/goalProtein"
        android:layout_weight="0.24" />

    TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2,300"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:id="@+id/textView1015"
        android:layout_weight="0.24" />

</LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/divider"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="35dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remaining"
        android:textSize="19dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView6"
        android:layout_weight="0.19" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2,230"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorGreenCalories"
        android:textSize="15dp"
        android:id="@+id/remainingCals"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="278"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorGreenCalories"
        android:textSize="15dp"
        android:id="@+id/remainingCarbs"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="74"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorGreenCalories"
        android:textSize="15dp"
        android:id="@+id/remainingFat"
        android:layout_weight="0.24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="111"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorGreenCalories"
        android:textSize="15dp"
        android:id="@+id/remainingProtein"
        android:layout_weight="0.24" />

    TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2,300"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorGreenCalories"
        android:textSize="15dp"
        android:id="@+id/textView10435"
        android:layout_weight="0.24" />
</LinearLayout>
    <Button
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:text="Make Entry"
        android:layout_marginBottom="-20dp"
        android:background="@color/colorgray"
        android:layout_gravity="center"
        android:id="@+id/Btn_MakeEntry"
        android:textColor="@color/colorWhiteTopBarText"
        android:textSize="17dp"
        android:layout_weight="0.10" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_bar"
        android:layout_marginTop="40dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_gravity="bottom"
            android:text="@string/Home"
            android:id="@+id/Btn_Home1"
            android:background="@color/colorBlueTopBar"
            android:textColor="@color/colorWhiteTopBarText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="7dp"
            android:text="@string/FoodDiary"
            android:id="@+id/Btn_FD1"
            android:background="@color/colorBlueTopBar"
            android:textColor="@color/colorWhiteTopBarText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="270dp"
            android:layout_marginRight="2dp"
            android:text="@string/Progress"
            android:id="@+id/Btn_Progress1"
            android:background="@color/colorBlueTopBar"
            android:textColor="@color/colorWhiteTopBarText"
            />

    </FrameLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>